--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: TheLivingForce
-main: de.Lathanael.TheLivingForce.bukkit.ForcePlugin
+main: de.Lathanael.ForceCraft.bukkit.ForcePlugin
 version: ${project.version} (BUILD ${git.build.time})
 author: Lathanael
 depend: [Spout]
