--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -19,6 +19,10 @@ commands:
         description: Sets different properties for a given player.
         aliases: [fset]
         usage: /<command> [type] [player] <number>
+    fc_bind:
+        description: Binds a Force Power the given key.
+        aliases: [fbind]
+        usage: /<command> [key] [power] - key maybe a number or the name definde by Spout!
 
 permissions:
     force.*:
@@ -34,11 +38,13 @@ permissions:
             force.pull: true
             force.push: true
             force.choke: true
+            force.bind: true
     force.user.light:
         description: Grants access to all Lightside Forces.
         default: false
         children:
             force.flash: true
+            force.bind: true
     force.user.*:
         description: Grants access to all Forces.
         default: false
@@ -65,4 +71,7 @@ permissions:
         default: false
     force.push:
         description: Allows usage of the Choke force.
+        default: false
+    force.bind:
+        description: Allows usage of the /fbind command.
         default: false
