--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -23,7 +23,26 @@ commands:
         description: Binds a Force Power the given key.
         aliases: [fbind]
         usage: /<command> [key] [power] - key maybe a number or the name definde by Spout!
-
+    fc_choke:
+        description: Chokes the targeted player if he is within your range.
+        aliases: [choke]
+        usage /<command> [target]
+    fc_run:
+        description: Lets you run faster for a given time depending on your rank.
+        aliases: [run]
+        usage /<command>
+    fc_jump:
+        description: Lets you jump higher for a given time depending on your rank.
+        aliases: [jump]
+        usage /<command>
+    fc_shield:
+        description: Surrounds you with a shield, protecting you against projectiles for a given amount depending on your rank.
+        aliases: [shield]
+        usage /<command>
+    fc_rage:
+        description: Use Rage to deal double the amount of damage for a given time depending on your rank.
+        aliases: [rage]
+        usage /<command>
 permissions:
     force.*:
         description: Grants access to all ForceCraft commands and powers.
@@ -39,12 +58,20 @@ permissions:
             force.push: true
             force.choke: true
             force.bind: true
+            force.run: true
+            force.jump: true
+            force.rage: true
+            force.shield: true
     force.user.light:
         description: Grants access to all Lightside Forces.
         default: false
         children:
             force.flash: true
             force.bind: true
+            force.run: true
+            force.jump: true
+            force.rage: true
+            force.shield: true
     force.user.*:
         description: Grants access to all Forces.
         default: false
@@ -63,6 +90,9 @@ permissions:
     force.set:
         description: Allows usage of the /fset command
         default: false
+    force.bind:
+        description: Allows usage of the /fbind command.
+        default: false
     force.pull:
         description: Allows usage of the Pull force.
         default: false
@@ -72,6 +102,15 @@ permissions:
     force.push:
         description: Allows usage of the Choke force.
         default: false
-    force.bind:
-        description: Allows usage of the /fbind command.
+    force.run:
+        description: Allows usage of the Run force.
+        default: false
+    force.jump:
+        description: Allows usage of the Jump force.
+        default: false
+    force.rage:
+        description: Allows usage of the Rage force.
+        default: false
+    force.shield:
+        description: Allows usage of the Shield force.
         default: false
