--- a/pom.xml
+++ b/pom.xml
@@ -163,20 +163,12 @@
             </plugins>
         </pluginManagement>
   </build>
-  <repositories>
+    <repositories>
         <repository>
             <snapshots />
-            <id>Bukkit-dev</id>
-            <name>Bukkit-Dev</name>
-            <url>http://www.gestdown.info:8888/artifactory/Bukkit-dev</url>
-        </repository>
-        <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>central</id>
-            <name>Maven Repository Switchboard</name>
-            <url>http://repo1.maven.org/maven2</url>
+            <id>BukkitDev</id>
+            <name>BukkitDev</name>
+            <url>http://www.gestdown.info:8888/nexus/content/groups/BukkitDev/</url>
         </repository>
         <repository>
             <id>spout-repo</id>
@@ -186,18 +178,10 @@
     </repositories>
     <pluginRepositories>
         <pluginRepository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>central</id>
-            <name>plugins-release</name>
-            <url>http://gestdown.info:8888/artifactory/plugins-release</url>
-        </pluginRepository>
-        <pluginRepository>
             <snapshots />
-            <id>snapshots</id>
-            <name>plugins-snapshot</name>
-            <url>http://gestdown.info:8888/artifactory/plugins-snapshot</url>
+            <id>BukkitDev</id>
+            <name>BukkitDev</name>
+            <url>http://www.gestdown.info:8888/nexus/content/groups/BukkitDev/</url>
         </pluginRepository>
     </pluginRepositories>
     <distributionManagement>
@@ -209,18 +193,15 @@
 </distributionManagement>
   <dependencies>
     <dependency>
-        <groupId>org.bukkit</groupId>
-        <artifactId>craftbukkit</artifactId>
-        <version>1.8.1-R5-SNAPSHOT</version>
-        <type>jar</type>
-        <scope>provided</scope>
-    </dependency>
-    <dependency>
-        <groupId>org.bukkit</groupId>
-        <artifactId>bukkit</artifactId>
-        <version>1.8.1-R5-SNAPSHOT</version>
-        <scope>provided</scope>
-    </dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>bukkit</artifactId>
+            <version>1.0.0-R1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>craftbukkit</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     <dependency>
         <groupId>org.getspout</groupId>
         <artifactId>spoutapi</artifactId>
@@ -231,13 +212,13 @@
     <dependency>
         <groupId>ru.tehkode</groupId>
         <artifactId>PermissionsEx</artifactId>
-        <version>1.15</version>
+        <version>1.16</version>
         <scope>provided</scope>
     </dependency>
     <dependency>
         <groupId>de.bananaco</groupId>
         <artifactId>bPermissions</artifactId>
-        <version>1337-SNAPSHOT</version>
+        <version>1337</version>
         <scope>provided</scope>
     </dependency>
   </dependencies>
