--- a/pom.xml
+++ b/pom.xml
@@ -203,16 +203,16 @@
     <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.0.0-R1-SNAPSHOT</version>
+            <version>1.0.1-R2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.1-R2-SNAPSHOT</version>
         </dependency>
     <dependency>
         <groupId>org.getspout</groupId>
-        <artifactId>spoutapi</artifactId>
+        <artifactId>spoutpluginapi</artifactId>
         <version>dev-SNAPSHOT</version>
         <type>jar</type>
         <scope>provided</scope>
