Some changes and fixes :)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,7 @@
 ForceSensitiveOnJoin: false
 DebugMessages: false
 IgnorePermissionBridge: true
+checkDistance: 20
 Power:
   Push:
     enabled: true
