--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,6 +2,7 @@ ForceSensitiveOnJoin: false
 DebugMessages: false
 IgnorePermissionBridge: true
 checkDistance: 20
+manaBarTexURL: http://...
 Power:
   Push:
     enabled: true
