--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,6 +3,8 @@ DebugMessages: false
 IgnorePermissionBridge: true
 checkDistance: 20
 manaBarTexURL: http://...
+maxSkillPoints: 20
+startingSkillPoints: 5
 Power:
   Push:
     enabled: true
@@ -82,3 +84,9 @@ ManaInc:
     '3': 50
     '4': 50
     '5': 50
+SkillPointInc:
+    '1': 0
+    '2': 3
+    '3': 3
+    '4': 3
+    '5': 3
