--- a/src/main/resources/texturePaths.yml
+++ b/src/main/resources/texturePaths.yml
@@ -1,2 +1,4 @@
-manaBarTexURL: http://...
-BackgroundTexURL: http://...
+manaBarTexURL: http://dl.dropbox.com/u/42731731/BarTex.jpg
+BackgroundTexURL: http://dl.dropbox.com/u/42731731/Background.png
+SkillPoint: http://dl.dropbox.com/u/42731731/SkillPoint.png
+SPHighlighted: http://dl.dropbox.com/u/42731731/Power_Back.png
