--- a/pom.xml
+++ b/pom.xml
@@ -235,16 +235,6 @@
     </distributionManagement>
   <dependencies>
     <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.1-R5-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>craftbukkit</artifactId>
-            <version>1.1-R5-SNAPSHOT</version>
-        </dependency>
-    <dependency>
         <groupId>org.getspout</groupId>
         <artifactId>spoutpluginapi</artifactId>
         <version>dev-SNAPSHOT</version>
@@ -262,6 +252,18 @@
         <artifactId>bPermissions</artifactId>
         <version>1337</version>
         <scope>provided</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.bukkit</groupId>
+    	<artifactId>bukkit</artifactId>
+    	<version>1.1-R5-SNAPSHOT</version>
+    	<scope>provided</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.bukkit</groupId>
+    	<artifactId>craftbukkit</artifactId>
+    	<version>1.1-R5-SNAPSHOT</version>
+    	<scope>provided</scope>
     </dependency>
   </dependencies>
     <properties>
