--- a/src/main/resources/powerInfo.yml
+++ b/src/main/resources/powerInfo.yml
@@ -53,11 +53,18 @@ Heal:
     '4': 0
     '5': 0
 Flash:
-    '1': 0
-    '2': 0
-    '3': 0
-    '4': 0
-    '5': 0
+    Duration:
+        '1': 0.0
+        '2': 0.0
+        '3': 0.0
+        '4': 0.0
+        '5': 0.0
+    Radius:
+        '1': 0
+        '2': 0
+        '3': 0
+        '4': 0
+        '5': 0
 Rage:
     '1': 0
     '2': 0
