First parts of a working Push/Pull code

--- a/src/main/resources/powerInfo.yml
+++ b/src/main/resources/powerInfo.yml
@@ -1,15 +1,29 @@
 Pull:
-    '1': 0.0
-    '2': 0.0
-    '3': 0.0
-    '4': 0.0
-    '5': 0.0
+      Strength:
+          '1': 0.0
+          '2': 0.0
+          '3': 0.0
+          '4': 0.0
+          '5': 0.0
+      Entity:
+          '1': 0.0
+          '2': 0.0
+          '3': 0.0
+          '4': 0.0
+          '5': 0.0
 Push:
-    '1': 0.0
-    '2': 0.0
-    '3': 0.0
-    '4': 0.0
-    '5': 0.0
+      Strength:
+          '1': 0.0
+          '2': 0.0
+          '3': 0.0
+          '4': 0.0
+          '5': 0.0
+      Entity:
+          '1': 0.0
+          '2': 0.0
+          '3': 0.0
+          '4': 0.0
+          '5': 0.0
 Choke:
     '1': 0
     '2': 0
