--- a/src/main/resources/powerInfo.yml
+++ b/src/main/resources/powerInfo.yml
@@ -43,11 +43,18 @@ Jump:
     '4': 0
     '5': 0
 Lightning:
-    '1': 0
-    '2': 0
-    '3': 0
-    '4': 0
-    '5': 0
+    Amount:
+        '1': 0
+        '2': 0
+        '3': 0
+        '4': 0
+        '5': 0
+    Duration:
+        '1': 0
+        '2': 0
+        '3': 0
+        '4': 0
+        '5': 0
 Shield:
     '1': 0.0
     '2': 0.0
