Better texture handling

--- a/src/main/resources/texturePaths.yml
+++ b/src/main/resources/texturePaths.yml
@@ -2,3 +2,17 @@ manaBarTexURL: http://dl.dropbox.com/u/42731731/BarTex.jpg
 BackgroundTexURL: http://dl.dropbox.com/u/42731731/Background.png
 SkillPoint: http://dl.dropbox.com/u/42731731/SkillPoint.png
 SPHighlighted: http://dl.dropbox.com/u/42731731/SkillPointHighlighted.png
+Symbol: http://dl.dropbox.com/u/42731731/STPicBack.png
+PowerBack: http://dl.dropbox.com/u/42731731/Power_Back.png
+Pull:
+Push:
+Choke:
+Lift:
+Run:
+Jump:
+Lightning:
+Shield:
+Heal:
+Flash:
+Rage:
+Mediation:
