--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.Lathanael</groupId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0-Beta1</version>
   <artifactId>ForceCraft</artifactId>
   <name>ForceCraft</name>
   <scm>
@@ -11,7 +11,7 @@
   </scm>
   <build>
     <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
-    <defaultGoal>clean install</defaultGoal>
+    <defaultGoal>clean package</defaultGoal>
     <finalName>ForceCraft</finalName>
     <resources>
         <resource>
