--- a/src/main/resources/powerInfo.yml
+++ b/src/main/resources/powerInfo.yml
@@ -56,11 +56,18 @@ Lightning:
         '4': 0
         '5': 0
 Shield:
-    '1': 0.0
-    '2': 0.0
-    '3': 0.0
-    '4': 0.0
-    '5': 0.0
+    Reduction:
+      '1': 0.0
+      '2': 0.0
+      '3': 0.0
+      '4': 0.0
+      '5': 0.0
+    Duration:
+        '1': 0
+        '2': 0
+        '3': 0
+        '4': 0
+        '5': 0
 Heal:
     '1': 0
     '2': 0
