--- a/pom.xml
+++ b/pom.xml
@@ -206,11 +206,6 @@
 			<name>BukkitDev</name>
 			<url>http://www.gestdown.info:8888/nexus/content/groups/BukkitDev/</url>
 		</repository>
-		<repository>
-			<id>spout-repo</id>
-			<name>Spout Repo</name>
-			<url>http://repo.getspout.org</url>
-		</repository>
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
@@ -237,37 +232,35 @@
 	</distributionManagement>
 	<dependencies>
 		<dependency>
+			<groupId>com.nijikokun.bukkit</groupId>
+			<artifactId>Permissions</artifactId>
+			<version>3.1.6</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.getspout</groupId>
-			<artifactId>spoutpluginapi</artifactId>
+			<artifactId>spoutplugin</artifactId>
 			<version>dev-SNAPSHOT</version>
-			<type>jar</type>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>ru.tehkode</groupId>
 			<artifactId>PermissionsEx</artifactId>
 			<version>1.19</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.bananaco</groupId>
 			<artifactId>bPermissions</artifactId>
-			<version>1337</version>
-			<scope>provided</scope>
+			<version>2.9.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.2.5-R3.1-SNAPSHOT</version>
-			<type>jar</type>
-			<scope>provided</scope>
+			<version>1.3.2-R1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>craftbukkit</artifactId>
-			<version>1.2.5-R3.1-SNAPSHOT</version>
-			<type>jar</type>
-			<scope>provided</scope>
+			<version>1.3.2-R1.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<properties>
